idea/testData/highlighter/TopLevelOpenSuspendFun.kt
<error descr="[WRONG_MODIFIER_TARGET] Modifier 'open' is not applicable to 'top level function'"><info descr="null">open</info></error> <warning descr="[EXPERIMENTAL_FEATURE_WARNING] The feature \"coroutines\" is experimental (see: https://kotlinlang.org/docs/diagnostics/experimental-coroutines)"><info descr="null">suspend</info></warning> fun <info descr="null">f</info>() {}